2006-01-26  Rodney Dawes  <dobey@novell.com>

	* gnome-background-properties.glade: Add an Apply button

	* gnome-wp-capplet.[ch]: Replace old_filename with an old_item struct
	(gnome_wp_props_wp_set): Set the filename key to empty string when
	setting the background to "No Wallpaper"
	(gnome_wp_props_revert): New method to revert changes in the dialog
	when the Cancel button is clicked
	(gnome_wp_main_quit): Free the old_item structure
	(wallpaper_properties_clicked): Handle the Apply button
	Handle closing the dialog for OK separately from Cancel/delete_event
	Revert the settings when Cancel or wm "x" or ESC are clicked
	(gnome_wp_load_stuffs): Set the old_item to the currently selected
	background setting, whether it be an image or "No Wallpaper"

	* gnome-wp-info.c (gnome_wp_info_dup): If info is NULL, just return
	NULL rather than trying to access members of an empty struct

	* gnome-wp-item.[ch] (gnome_wp_item_dup): New method to create a
	duplicate and newly allocated GnomeWPItem structure

	Fixes #327335
	
2006-01-14  Rodney Dawes  <dobey@novell.com>

	* gnome-background-properties.glade: Set the visibility of the second
	color chooser button to off by default

	Fixes #319463

2006-01-14  Rodney Dawes  <dobey@novell.com>

	* *.[ch]: Update Copyright notice to include 2006 year

	* gnome-background-properties.glade: Change the main dialog to use
	explicit apply with OK and Cancel buttons
	Remove the icons from the "Add Wallpaper" and "Remove" buttons

	* gnome-wp-capplet.c (gnome_wp_props_wp_set): Add a new retval boolean
	so that we can return whether or not we are trying to set the wallpaper
	to the same image filename as before
	Remove all the UI updating code from here
	Fix a potential leak of the GConfChangeSet object
	(gnome_wp_props_wp_selected): Update the UI whenever a different
	wallpaper is selected in the list
	Remove the timeout to update gconf, as we are using explicit apply now
	(gnome_wp_main_quit): Free the old_filename variable